--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,10 @@
 
     <link href="/favicon.ico" rel="icon">
 
-    <script src="https://js.stripe.com/v3/"></script>
+    <script src="https://js.stripe.com/v3/" defer></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,900;1,100;1,200;1,300;1,400;1,500" rel="stylesheet">
-    <script src="//use.typekit.net/lna1ryl.js"></script>
+    <script src="//use.typekit.net/lna1ryl.js" defer></script>
     <script>try{Typekit.load();}catch(e){}</script>
 
     <script src="/assets/js/homework/vendor/jquery/dist/jquery.min.js"></script>
