--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,9 @@
     <script src="//use.typekit.net/lna1ryl.js" defer></script>
     <script>try{Typekit.load();}catch(e){}</script>
 
-    <script src="/assets/js/homework/vendor/jquery/dist/jquery.min.js"></script>
+    <script src="/assets/js/homework/vendor/jquery/dist/jquery.min.js" defer></script>
     <script>var media_url = '/assets/', site_url = '/';$(document).load().scrollTop(0);</script>
-    <script data-main="/assets/js/homework/home" src="/assets/js/homework/vendor/requirejs/require.js"></script>
+    <script data-main="/assets/js/homework/home" src="/assets/js/homework/vendor/requirejs/require.js" defer></script>
 
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
