--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,7 @@
 
     <script src="https://js.stripe.com/v3/" defer></script>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin>
-
-    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,900;1,100;1,200;1,300;1,400;1,500&display=swap">
-
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,900;1,100;1,200;1,300;1,400;1,500&display=swap" media="print" onload=""this.media="all">
-
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,900;1,100;1,200;1,300;1,400;1,500" rel="stylesheet">
     <script src="//use.typekit.net/lna1ryl.js" defer></script>
     <script>try{Typekit.load();}catch(e){}</script>
 
