--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,42 @@
     <meta name="description" content="Web Dev Insider demo page for learning purposes.">
     <meta name="format-detection" content="telephone=no">
     <meta name="robots" content="noindex, nofollow">
+    <link rel="preload" href="assets/fonts/bw-fonts/Montserrat-Thin.woff2" as="font" format="font/woff2">
+    <link rel="preload" href="assets/fonts/bw-fonts/Montserrat-Thin.woff" as="font" format="font/woff">
+    <style>
+    @font-face {
+      font-family: 'Montserrat';
+      src: local('Montserrat Thin'), local('Montserrat-Thin'),
+          url('Montserrat-Thin.woff2') format('woff2'),
+          url('Montserrat-Thin.woff') format('woff');
+      font-weight: 300;
+      font-style: normal;
+      font-display: swap;
+    }
+    @font-face {
+      font-family: 'Montserrat';
+      src: local('Montserrat Thin'), local('Montserrat-Thin'),
+          url('Montserrat-Thin.woff2') format('woff2'),
+          url('Montserrat-Thin.woff') format('woff');
+      font-weight: 400;
+      font-style: normal;
+      font-display: swap;
+    }
+    @font-face {
+      font-family: 'Montserrat';
+      src: local('Montserrat Thin'), local('Montserrat-Thin'),
+          url('Montserrat-Thin.woff2') format('woff2'),
+          url('Montserrat-Thin.woff') format('woff');
+      font-weight: 600;
+      font-style: normal;
+      font-display: swap;
+    }
+    </style>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin>
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin>
     <link rel ="preload" href="https://fonts.gstatic.com/s/montserrat/v25/JTUQjIg1_i6t8kCHKm459WxRxy7mw9c.woff2" as="font" format="font/woff2"> 
     <link rel = "preload" href="https://fonts.gstatic.com/s/montserrat/v25/JTUSjIg1_i6t8kCHKm459Wlhyw.woff2" as="font" format="font/woff2"> 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,900;1,100;1,200;1,300;1,400;1,500&display=swap" media="print" onload="this.media='all'">'
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,900;1,100;1,200;1,300;1,400;1,500&display=swap" media="print" onload="this.media='all'">' -->
 
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin>
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,900;1,100;1,200;1,300;1,400;1,500&display=swap">
