--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
     @font-face {
       font-family: 'Montserrat';
       src: local('Montserrat Thin'), local('Montserrat-Thin'),
-          url('Montserrat-Thin.woff2') format('woff2'),
-          url('Montserrat-Thin.woff') format('woff');
+          url('assets/fonts/bw-fonts/Montserrat-Thin.woff2') format('woff2'),
+          url('assets/fonts/bw-fonts/Montserrat-Thin.woff') format('woff');
       font-weight: 300;
       font-style: normal;
       font-display: swap;
@@ -22,8 +22,8 @@
     @font-face {
       font-family: 'Montserrat';
       src: local('Montserrat Thin'), local('Montserrat-Thin'),
-          url('Montserrat-Thin.woff2') format('woff2'),
-          url('Montserrat-Thin.woff') format('woff');
+          url('assets/fonts/bw-fonts/Montserrat-Thin.woff2') format('woff2'),
+          url('assets/fonts/bw-fonts/Montserrat-Thin.woff') format('woff');
       font-weight: 400;
       font-style: normal;
       font-display: swap;
@@ -31,8 +31,8 @@
     @font-face {
       font-family: 'Montserrat';
       src: local('Montserrat Thin'), local('Montserrat-Thin'),
-          url('Montserrat-Thin.woff2') format('woff2'),
-          url('Montserrat-Thin.woff') format('woff');
+          url('assets/fonts/bw-fonts/Montserrat-Thin.woff2') format('woff2'),
+          url('assets/fonts/bw-fonts/Montserrat-Thin.woff') format('woff');
       font-weight: 600;
       font-style: normal;
       font-display: swap;
