--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <style>
     @font-face {
       font-family: 'Montserrat';
-      src: local('Montserrat Thin'), local('Montserrat-Thin'),
+      src: local('Montserrat'), local('Montserrat'),
           url('assets/fonts/bw-fonts/Montserrat-Thin.woff2') format('woff2'),
           url('assets/fonts/bw-fonts/Montserrat-Thin.woff') format('woff');
       font-weight: 300;
@@ -21,7 +21,7 @@
     }
     @font-face {
       font-family: 'Montserrat';
-      src: local('Montserrat Thin'), local('Montserrat-Thin'),
+      src: local('Montserrat Thin'), local('Montserrat'),
           url('assets/fonts/bw-fonts/Montserrat-Thin.woff2') format('woff2'),
           url('assets/fonts/bw-fonts/Montserrat-Thin.woff') format('woff');
       font-weight: 400;
@@ -30,7 +30,7 @@
     }
     @font-face {
       font-family: 'Montserrat';
-      src: local('Montserrat Thin'), local('Montserrat-Thin'),
+      src: local('Montserrat'), local('Montserrat'),
           url('assets/fonts/bw-fonts/Montserrat-Thin.woff2') format('woff2'),
           url('assets/fonts/bw-fonts/Montserrat-Thin.woff') format('woff');
       font-weight: 600;
