--- a/src/index.html
+++ b/src/index.html
@@ -7,36 +7,37 @@
     <meta name="description" content="Web Dev Insider demo page for learning purposes.">
     <meta name="format-detection" content="telephone=no">
     <meta name="robots" content="noindex, nofollow">
-    <link rel="preload" href="assets/fonts/bw-fonts/Montserrat-Thin.woff2" as="font" format="font/woff2">
-    <link rel="preload" href="assets/fonts/bw-fonts/Montserrat-Thin.woff" as="font" format="font/woff">
+    <link rel="preload" href="assets/fonts/bw-fonts/Montserrat-Light.woff2" as="font"  format="font/woff2">
+    <link rel="preload" href="assets/fonts/bw-fonts/Montserrat-Regular.woff2" as="font"  format="font/woff"2>
+    <link rel="preload" href="assets/fonts/bw-fonts/Montserrat-SemiBold.woff2" as="font"  format="font/woff2">
+    
     <style>
-    @font-face {
-      font-family: 'Montserrat';
-      src: local('Montserrat'), local('Montserrat'),
-          url('assets/fonts/bw-fonts/Montserrat-Thin.woff2') format('woff2'),
-          url('assets/fonts/bw-fonts/Montserrat-Thin.woff') format('woff');
-      font-weight: 300;
-      font-style: normal;
-      font-display: swap;
+      @font-face {
+        font-family: 'Montserrat';
+        src: url('Montserrat-Light.woff2') format('woff2');
+            /* url('Montserrat-Light.woff') format('woff'); */
+        font-weight: 300;
+        font-style: normal;
+        font-display: swap;
     }
     @font-face {
-      font-family: 'Montserrat';
-      src: local('Montserrat Thin'), local('Montserrat'),
-          url('assets/fonts/bw-fonts/Montserrat-Thin.woff2') format('woff2'),
-          url('assets/fonts/bw-fonts/Montserrat-Thin.woff') format('woff');
-      font-weight: 400;
-      font-style: normal;
-      font-display: swap;
+        font-family: 'Montserrat';
+        src: url('Montserrat-Regular.woff2') format('woff2');
+            /* url('Montserrat-Light.woff') format('woff'); */
+        font-weight: 300;
+        font-style: normal;
+        font-display: swap;
     }
     @font-face {
-      font-family: 'Montserrat';
-      src: local('Montserrat'), local('Montserrat'),
-          url('assets/fonts/bw-fonts/Montserrat-Thin.woff2') format('woff2'),
-          url('assets/fonts/bw-fonts/Montserrat-Thin.woff') format('woff');
-      font-weight: 600;
-      font-style: normal;
-      font-display: swap;
+        font-family: 'Montserrat';
+        src: url('Montserrat-SemiBold.woff2') format('woff2');
+            /* url('Montserrat-Light.woff') format('woff'); */
+        font-weight: 300;
+        font-style: normal;
+        font-display: swap;
     }
+
+
     </style>
 
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin>
