--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,13 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="robots" content="noindex, nofollow">
     <link rel="preload" href="assets/fonts/bw-fonts/Montserrat-Light.woff2" as="font"  format="font/woff2">
-    <link rel="preload" href="assets/fonts/bw-fonts/Montserrat-Regular.woff2" as="font"  format="font/woff"2>
+    <link rel="preload" href="assets/fonts/bw-fonts/Montserrat-Regular.woff2" as="font"  format="font/woff2">
     <link rel="preload" href="assets/fonts/bw-fonts/Montserrat-SemiBold.woff2" as="font"  format="font/woff2">
     
     <style>
       @font-face {
         font-family: 'Montserrat';
-        src: url('Montserrat-Light.woff2') format('woff2');
+        src: url('/assets/fonts/bw-fonts/Montserrat-Light.woff2') format('woff2');
             /* url('Montserrat-Light.woff') format('woff'); */
         font-weight: 300;
         font-style: normal;
@@ -22,17 +22,17 @@
     }
     @font-face {
         font-family: 'Montserrat';
-        src: url('Montserrat-Regular.woff2') format('woff2');
+        src: url('assets/fonts/bw-fonts/Montserrat-Regular.woff2') format('woff2');
             /* url('Montserrat-Light.woff') format('woff'); */
-        font-weight: 300;
+        font-weight: 400;
         font-style: normal;
         font-display: swap;
     }
     @font-face {
         font-family: 'Montserrat';
-        src: url('Montserrat-SemiBold.woff2') format('woff2');
+        src: url('assets/fonts/bw-fonts/Montserrat-SemiBold.woff2') format('woff2');
             /* url('Montserrat-Light.woff') format('woff'); */
-        font-weight: 300;
+        font-weight: 600;
         font-style: normal;
         font-display: swap;
     }
