--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,12 @@
     <meta name="description" content="Web Dev Insider demo page for learning purposes.">
     <meta name="format-detection" content="telephone=no">
     <meta name="robots" content="noindex, nofollow">
-    <link href="assets/fonts/bw-fonts/Montserrat-Light.woff2" as="font"  format="font/woff2">
-    <link href="assets/fonts/bw-fonts/Montserrat-Regular.woff2" as="font" format="font/woff2">
+    <link rel="preload" href="assets/fonts/bw-fonts/Montserrat-Light.woff2" as="font"  format="font/woff2">
+    <link rel="preload" href="assets/fonts/bw-fonts/Montserrat-Regular.woff2" as="font" format="font/woff2">
     <link rel="preload" href="assets/fonts/bw-fonts/Montserrat-SemiBold.woff2" as="font" format="font/woff2">
     
     <style>
-      /* @font-face {
+      @font-face {
         font-family: 'Montserrat';
         src: url('/assets/fonts/bw-fonts/Montserrat-Light.woff2') format('woff2'),
             url('/assets/fonts/bw-fonts/Montserrat-Light.woff') format('woff');
@@ -27,7 +27,7 @@
         font-weight: 400;
         font-style: normal;
         font-display: swap;
-    } */
+    }
     @font-face {
         font-family: 'Montserrat';
         src: url('assets/fonts/bw-fonts/Montserrat-SemiBold.woff2') format('woff2'),
@@ -46,8 +46,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,900;1,100;1,200;1,300;1,400;1,500&display=swap" media="print" onload="this.media='all'">' -->
 
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin>
-    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,900;1,100;1,200;1,300;1,400;1,500&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,900;1,100;1,200;1,300;1,400;1,500&display=swap" media="print" onload=""this.media="all"> -->
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,900;1,100;1,200;1,300;1,400;1,500&display=swap"> -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,900;1,100;1,200;1,300;1,400;1,500&display=swap" media="print" onload=""this.media="all">
 
     <link href="/assets/css/homework/app.css" rel="stylesheet">
     <link media="none" onload="if(media!='all')media='all'" href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
