--- a/src/index.html
+++ b/src/index.html
@@ -7,34 +7,9 @@
     <meta name="description" content="Web Dev Insider demo page for learning purposes.">
     <meta name="format-detection" content="telephone=no">
     <meta name="robots" content="noindex, nofollow">
-    <style>
-      @font-face {
-        font-family: 'Montserrat';
-        src: url('/assets/fonts/bw-fonts/subset-Montserrat-Light.woff2') format('woff2'),
-            url('/assets/fonts/bw-fonts/subset-Montserrat-Light.woff') format('woff');
-        font-weight: 300;
-        font-style: normal;
-        font-display: swap;
-    }
-    @font-face {
-        font-family: 'Montserrat';
-        src: url('assets/fonts/bw-fonts/subset-Montserrat-Regular.woff2') format('woff2'),
-            url('assets/fonts/bw-fonts/subset-Montserrat-Regular.woff2') format('woff');
-        font-weight: 400;
-        font-style: normal;
-        font-display: swap;
-    }
-    @font-face {
-        font-family: 'Montserrat';
-        src: url('assets/fonts/bw-fonts/subset-Montserrat-SemiBold.woff2') format('woff2'),
-            url('assets/fonts/bw-fonts/subset-Montserrat-SemiBold.woff2') format('woff');
-        font-weight: 600;
-        font-style: normal;
-        font-display: swap;
-    }
-
-
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap" as="style">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap" media="print" onload="this.media='all'">
 
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin>
     <link rel ="preload" href="https://fonts.gstatic.com/s/montserrat/v25/JTUQjIg1_i6t8kCHKm459WxRxy7mw9c.woff2" as="font" format="font/woff2"> 
