--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,12 @@
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap" as="style">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap" media="print" onload="this.media='all'"> -->
+    <link rel="preload" href="/assets/fonts/bw-fonts/subset-Montserrat-Light.woff2">
+    <link rel="preload" href="/assets/fonts/bw-fonts/subset-Montserrat-Light.woff">
+    <link rel="preload" href="/assets/fonts/bw-fonts/subset-Montserrat-Regular.woff2">
+    <link rel="preload" href="/assets/fonts/bw-fonts/subset-Montserrat-Regular.woff">
+    <link rel="preload" href="/assets/fonts/bw-fonts/subset-Montserrat-SemiBold.woff2">
+    <link rel="preload" href="/assets/fonts/bw-fonts/subset-Montserrat-SemiBold.woff">
     <style>
       @font-face {
         font-family: 'Montserrat';
