--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <link rel="preload" href="assets/fonts/bw-fonts/subset-Montserrat-Regular.woff2">
     <link rel="preload" href="assets/fonts/bw-fonts/subset-Montserrat-SemiBold.woff">
     <link rel="preload" href="assets/fonts/bw-fonts/subset-Montserrat-SemiBold.woff2">
-    <!-- <style>
+    <style>
       @font-face {
         font-family: 'Montserrat';
         src: url('assets/fonts/bw-fonts/subset-Montserrat-Light.woff2') format('woff2'),
@@ -45,7 +45,7 @@
         font-display: swap;
         unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
     }
-    </style> -->
+    </style>
 
 
     <link href="/assets/css/homework/app.css" rel="stylesheet">
