--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,12 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="robots" content="noindex, nofollow">
     <!-- Optymalizacja fontów Google -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap">
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap" media="print" onload="this.media='all'"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap" media="print" onload="this.media='all'"> -->
 
     <!-- Optymalizacja fontów lokalnie -->
-    <!-- <style>
+    <style>
       @font-face {
         font-family: 'Montserrat';
         src: url('assets/fonts/bw-fonts/subset-Montserrat-Light.woff2') format('woff2'),
@@ -41,7 +41,7 @@
         font-display: swap;
         unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
     }
-    </style> -->
+    </style>
 
 
     <link href="/assets/css/homework/app.css" rel="stylesheet">
@@ -54,8 +54,8 @@
     
 
    
-    <script src="//use.typekit.net/lna1ryl.js" defer></script>
-    <script>try{Typekit.load();}catch(e){}</script>
+    <!-- <script src="//use.typekit.net/lna1ryl.js" defer></script>
+    <script>try{Typekit.load();}catch(e){}</script> -->
 
     <script src="/assets/js/homework/vendor/jquery/dist/jquery.min.js" defer></script>
     <script>var media_url = '/assets/', site_url = '/';$(document).load().scrollTop(0);</script>
