--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap" media="print" onload="this.media='all'"> -->
 
     <!-- Optymalizacja fontów lokalnie -->
+    <link rel="preload" href="assets/fonts/bw-fonts/subset-Montserrat-Light.woff2">
+    <link rel="preload" href="assets/fonts/bw-fonts/subset-Montserrat-Light.woff">
+    <link rel="preload" href="assets/fonts/bw-fonts/subset-Montserrat-Regular.woff2">
+    <link rel="preload" href="assets/fonts/bw-fonts/subset-Montserrat-Regular.woff">
+
     <style>
       @font-face {
         font-family: 'Montserrat';
@@ -26,7 +31,7 @@
     @font-face {
         font-family: 'Montserrat';
         src: url('assets/fonts/bw-fonts/subset-Montserrat-Regular.woff2') format('woff2'),
-            url('assets/fonts/bw-fonts/subset-Montserrat-Regular.woff2') format('woff');
+            url('assets/fonts/bw-fonts/subset-Montserrat-Regular.woff') format('woff');
         font-weight: 400;
         font-style: normal;
         font-display: swap;
@@ -35,7 +40,7 @@
     @font-face {
         font-family: 'Montserrat';
         src: url('assets/fonts/bw-fonts/subset-Montserrat-SemiBold.woff2') format('woff2'),
-            url('assets/fonts/bw-fonts/subset-Montserrat-SemiBold.woff2') format('woff');
+            url('assets/fonts/bw-fonts/subset-Montserrat-SemiBold.woff') format('woff');
         font-weight: 600;
         font-style: normal;
         font-display: swap;
