--- a/src/index.html
+++ b/src/index.html
@@ -189,7 +189,7 @@
           <div class="col-35 text right">
             <div>
               <div class="item__category item__category--50 l-megamenu__cat"><a title="White papers" href="/">White papers</a></div>
-              <h2 class="headline-2">Report about mobile payment gateways</h2>
+              <h2 class="headline-2">aReport about mobile payment gateways</h2>
               <p class="small-text"><img src="/assets/images/homework/post2.png" loading="lazy" class="l-megamenu__image" alt=""> An MNO service that doesn&#39;t require a SIM change
               </p>
               <p>
