--- a/src/index.html
+++ b/src/index.html
@@ -203,7 +203,8 @@
 
     <header
       class="l-home-banner"
-      style="background-image: url('/assets/images/homework/banner.png')">
+      style="background-image: url('/assets/images/homework/banner-min.png')">
+      <img src="assets/images/homework/banner.png" style="width:100%; height:100%;" alt="">
       <div class="layout">
         <div class="home-banner__content text">
           <h1 class="headline-1">Seamless<br> payment option</h1>
