--- a/src/index.html
+++ b/src/index.html
@@ -203,8 +203,7 @@
 
     <header
       class="l-home-banner"
-      style="background-image: url('data:image/png;base64,aHR0cHM6Ly9zZW8tYmFydHVsYS1mcm9udGVuZC1vcHRpbWlzYXRpb24tc3RhcnRlci1raXQtZXRhLnZlcmNlbC5hcHAvYXNzZXRzL2ltYWdlcy9ob21ld29yay9iYW5uZXItbWluLnBuZw==')">
-      <img src="assets/images/homework/banner.png" style="width:100%; height:100%;" alt="">
+      style="background-image: url('/assets/images/homework/banner.png')">
       <div class="layout">
         <div class="home-banner__content text">
           <h1 class="headline-1">Seamless<br> payment option</h1>
