--- a/src/index.html
+++ b/src/index.html
@@ -216,7 +216,7 @@
 
     <header
       class="l-home-banner"
-      style="background-image: url('assets/images/homework/banner-min.png')">
+      style="background-image: url('aHR0cHM6Ly9zZW8tYmFydHVsYS1mcm9udGVuZC1vcHRpbWlzYXRpb24tc3RhcnRlci1raXQtZXRhLnZlcmNlbC5hcHAvYXNzZXRzL2ltYWdlcy9ob21ld29yay9iYW5uZXItbWluLnBuZw==')">
       <div class="bgcbwimage"><img src="assets/images/homework/banner.jpg" alt=""></div>
       <div class="layout">
         <div class="home-banner__content text">
