--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,8 @@
         position: absolute;
         top:0;
         left:0;
+        right:0;
+        bottom:0;
         z-index:-1;
         overflow: hidden;
     }
