--- a/src/index.html
+++ b/src/index.html
@@ -42,13 +42,16 @@
         unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
     }
     .l-home-banner img {
-      position: absolute;
+      /* position: absolute;
       top:0;
       left:0;
       right: 0;
       bottom:0;
       z-index: -1;
       opacity:1 !important;
+      overflow: hidden; */
+      width:100%;
+      height: 100%;
     }
     </style>
 
