--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,8 @@
       width:100%;
       height:100%;
       object-fit: cover;
+      opacity:1 !important;
+      position: absolute;
     }
     </style>
 
