--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="en" prefix="og: http://ogp.me/ns#">
+<html dir="ltr" lang="pl" prefix="og: http://ogp.me/ns#">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>Web Dev Insider - site to optimise - homepage</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Web Dev Insider demo page for learning purposes.">
