--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
     <script>try{Typekit.load();}catch(e){}</script> -->
 
     <script src="/assets/js/homework/vendor/jquery/dist/jquery.min.js" defer></script>
-    <script>var media_url = '/assets/', site_url = '/';$(document).load().scrollTop(0);</script>
+    <script>var media_url = '/assets/', site_url = '/';$(document).load().scrollTop(0); async</script>
     <script data-main="/assets/js/homework/home" src="/assets/js/homework/vendor/requirejs/require.js" defer></script>
 
     <!-- Google Tag Manager -->
@@ -69,7 +69,7 @@
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-TGDSWZ8');</script>
+    })(window,document,'script','dataLayer','GTM-TGDSWZ8'); async</script>
     <!-- End Google Tag Manager -->
 
     <!--Start of Tawk.to Script-->
