--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,13 @@
       position: absolute;
     }
     </style>
+
+
+    <link href="/assets/css/homework/app.css" rel="stylesheet">
+    <link media="none" onload="if(media!='all')media='all'" href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+
+    <link href="/favicon.ico" rel="icon">
+
     <script src="https://js.stripe.com/v3/" defer></script>
 
     
@@ -61,27 +68,19 @@
     <script>try{Typekit.load();}catch(e){}</script> -->
 
     <script src="/assets/js/homework/vendor/jquery/dist/jquery.min.js" defer></script>
-
+    <script>var media_url = '/assets/', site_url = '/';$(document).load().scrollTop(0);</script>
     <script data-main="/assets/js/homework/home" src="/assets/js/homework/vendor/requirejs/require.js" defer></script>
 
     <!-- Google Tag Manager -->
-    <script async>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-TGDSWZ8');</script>
     <!-- End Google Tag Manager -->
 
-   
-
-    <link href="/assets/css/homework/app.css" rel="stylesheet">
-    <link media="none" onload="if(media!='all')media='all'" href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-
-    <link href="/favicon.ico" rel="icon">
-
-    <script async>var media_url = '/assets/', site_url = '/';$(document).load().scrollTop(0);</script>
-     <!--Start of Tawk.to Script-->
-     <script type="text/javascript">
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
       var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
       (function(){
       var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
