--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap" media="print" onload="this.media='all'"> -->
 
     <link rel="preload" href="assets/images/homework/banner-min.png">
+    <link rel="preconnect preload" href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css">
 
     <!-- Optymalizacja fontów lokalnie -->
     <style>
