--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap" media="print" onload="this.media='all'"> -->
 
-    <link rel="preload" href="assets/images/homework/banner-min.png" as="image">
-    <link rel="preconnect preload" href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" as="style">
+    <link rel="preload" as="image" href="assets/images/homework/banner-min.png">
+    <link rel="preconnect preload" as="style" href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css">
 
     <!-- Optymalizacja fontów lokalnie -->
     <style>
@@ -54,23 +54,7 @@
     }
     </style>
 
-    <!--Start of Tawk.to Script-->
-    <script async type="text/javascript">
-      var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-      (function(){
-      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-      s1.async=true;
-      s1.src='https://embed.tawk.to/5fc2ba00920fc91564cb9b3c/default';
-      s1.charset='UTF-8';
-      s1.setAttribute('crossorigin','*');
-      s0.parentNode.insertBefore(s1,s0);
-      })();
-    </script>
-    <!--End of Tawk.to Script-->
-    <script src="/assets/js/homework/vendor/jquery/dist/jquery.min.js" async></script>
-    <script data-main="/assets/js/homework/home" src="/assets/js/homework/vendor/requirejs/require.js" async></script>
-    <script>var media_url = '/assets/', site_url = '/';$(document).load().scrollTop(0);</script>
-   
+
     <link href="/assets/css/homework/app.css" rel="stylesheet">
     <link media="none" onload="if(media!='all')media='all'" href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 
@@ -84,7 +68,9 @@
     <!-- <script src="//use.typekit.net/lna1ryl.js" defer></script>
     <script>try{Typekit.load();}catch(e){}</script> -->
 
-    
+    <script src="/assets/js/homework/vendor/jquery/dist/jquery.min.js" defer></script>
+    <script>var media_url = '/assets/', site_url = '/';$(document).load().scrollTop(0);</script>
+    <script data-main="/assets/js/homework/home" src="/assets/js/homework/vendor/requirejs/require.js" defer></script>
 
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -94,7 +80,19 @@
     })(window,document,'script','dataLayer','GTM-TGDSWZ8');</script>
     <!-- End Google Tag Manager -->
 
-    
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+      var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+      (function(){
+      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+      s1.async=true;
+      s1.src='https://embed.tawk.to/5fc2ba00920fc91564cb9b3c/default';
+      s1.charset='UTF-8';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1,s0);
+      })();
+    </script>
+    <!--End of Tawk.to Script-->
   </head>
   <body>
 
